--- a/index.html.save.1
+++ b/index.html.save.1
@@ -95,7 +95,6 @@
 		}
 		h2.thisweeksmenu {
 		    font-size: 2rem;
-                    color: #FFF;
 		}
 		.top {
 			background-image: linear-gradient(178deg, #FC01F3 85%, #fed101 calc(85% + 2px));
@@ -423,9 +422,7 @@
 			.bottomWrapper {
 				background-image: linear-gradient(182deg, #fed101 2%, #FC01F3 calc(2% + 2px));
 		    }
-			.notthisweek {
-				display: block;
-			}
+
 		}	
 		</style>
 		<script>
@@ -747,18 +744,17 @@
 							</a>
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
+							<a href="https://www.instagram.com/p/CdZW8wzrY2e/">
+								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
+						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/CekNLBirVyM/">
 								<img src="https://i.imgur.com/RHrn89k.jpg" class="img-thumbnail" alt="Great content.">
 								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
 							</a>
 						</div>
-						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-                                                        <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-                                                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
-                                                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775$
-                                                        </a>
-                                                </div>
-
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
